--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,14 +40,14 @@
                         <ul>
                             {% if site.twitter_username %}
                             <li>
-                                <a href="https://twitter.com/{{ site.twitter_username }}" class="SocialLink">
+                                <a href="https://twitter.com/{{ site.twitter_username }}" class="SocialLink twitter-link">
                                     <i class="fa fa-twitter"></i>
                                 </a>
                             </li>
                             {% endif %}
                             {% if site.linkedin_username %}
                             <li>
-                                <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" class="SocialLink">
+                                <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" class="SocialLink linkedin-link">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
