--- a/_includes/twitter.html
+++ b/_includes/twitter.html
@@ -1,3 +1,3 @@
-<a href="https://www.linkedin.com/in/{{ site.twitter_username }}" class="u-highlighted">
+<a href="https://twitter.com/{{ site.twitter_username }}" class="u-highlighted twitter-link">
     @{{ site.twitter_username }}
 </a>
