Relie le site à Google Plus

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -1,4 +1,5 @@
 <meta name="description" content="{{ site.description }}">
+{% if site.google_plus_profile_url %}<link rel="publisher" href="{{ site.google_plus_profile_url }}"/>{% endif %}
 <link rel="alternate" type="application/rss+xml" title="Flux RSS du site de Maître Sophie Moutot Noce" href="/feed.xml" />
 <script type="application/ld+json">
 {
