--- a/_includes/map.html
+++ b/_includes/map.html
@@ -3,5 +3,6 @@
     height="300"
     sandbox="allow-scripts allow-same-origin"
     layout="responsive"
-    src="{{ site.address.maps_url }}">
+    src="{{ site.address.maps_url }}"
+    aria-label="Carte Google Maps pointant sur le site du Cabinet">
 </amp-iframe>
