--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -1,16 +1,18 @@
 <!-- Home Gallery -->
-<amp-carousel width="800" height="400" layout="responsive" autoplay delay="8000" type="slides" class="Slider">
+<amp-carousel width="800" height="400" layout="responsive" autoplay delay="8000" type="slides" class="Slider" aria-label="Carroussel d'images introductif">
     {% for slide in site.home_slider %}
-    <div class="Slide">
+      <div class="Slide" 
+        aria-label="Image du carroussel: {% for text in slide.texts %}{% if !forloop.last  %}, {% endif %}{{ text }}{% endfor %}">
         <amp-img
                 src="https://source.unsplash.com/{{ slide.unsplash_id }}/800x400"
                 srcset="https://source.unsplash.com/{{ slide.unsplash_id }}/400x200 400w, https://source.unsplash.com/{{ slide.unsplash_id }}/800x400 800w, https://source.unsplash.com/{{ slide.unsplash_id }}/1600x800 1600w, https://source.unsplash.com/{{ slide.unsplash_id }}/3200x1600 3200w"
                 width="800"
                 height="400"
                 layout="responsive"
-                alt="{{ slide.name }}">
+                alt="{{ slide.name }}"
+                aria-hidden="true">
         </amp-img>
-        <div class="Slide-overlay">
+        <div class="Slide-overlay" aria-hidden="true">
             {% for text in slide.texts %}
             <p><span class="text">{{ text }}</span></p>
             {% endfor %}
