--- a/_includes/info_header.html
+++ b/_includes/info_header.html
@@ -1,5 +1,5 @@
 <!-- Info Header -->
-<header class="InfoHeader u-highlighted-content" itemscope itemtype="http://schema.org/LocalBusiness">
+<header class="InfoHeader u-highlighted-content" itemscope itemtype="http://schema.org/LocalBusiness" role="complementary">
     <div>
         <span itemprop="name">Cabinet MN Avocat</span> / première consultation gratuite
     </div>
