--- a/_includes/telephone.html
+++ b/_includes/telephone.html
@@ -1,3 +1,3 @@
-<a href="tel:{{ site.phone_number }}">
+<a href="tel:{{ site.phone_number }}" aria-label="numéro de téléphone du cabinet: {{ site.phone_number_text }}">
     <i class="fa fa-phone"></i> <span itemprop="telephone">{{ site.phone_number_text }}</span>
 </a>
