--- a/_includes/twitter.html
+++ b/_includes/twitter.html
@@ -1,3 +1,3 @@
-<a href="https://twitter.com/{{ site.twitter_username }}" class="u-highlighted twitter-link">
+<a href="https://twitter.com/{{ site.twitter_username }}" class="u-highlighted twitter-link" aria-label="Compte twitter: {{ site.twitter_username }}">
     @{{ site.twitter_username }}
 </a>
