--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,10 +8,10 @@ layout: default
             srcset="/assets/sophie-200x300.jpg 200w"
             width="100"
             height="150"
-            alt="Maitre Sophie Moutot Noce">
+            alt="Photo de Maitre Sophie Moutot Noce">
     </amp-img>
 </div>
-<div class="container">
+<div class="container" role="main">
     {{ content }}
 </div>
 
