Ajout d'espace au dessus du footer

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -266,6 +266,7 @@ address {
 }
 
 .HomeFooter {
+    margin-top: $padding;
     border-top: 4px solid #9b825e;
     padding-bottom: 2 * $padding;
 
