--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,62 +6,77 @@ layout: default
 
 <!-- Presentation -->
 <section class="section" role="banner">
-    <header>
-        <h4>Avocate au barreau de Paris</h4>
-        <h1>Maître Sophie Moutot Noce</h1>
-    </header>
+  <header>
+    <h4>Avocate au barreau de Paris</h4>
+    <h1>Maître Sophie Moutot Noce</h1>
+  </header>
 
-    <div class="u-center-content">
-        <amp-img
-                src="assets/sophie-200x300.jpg"
-                srcset="assets/sophie-200x300.jpg 200w"
-                width="100"
-                height="150"
-                alt="Photo de Maitre Sophie Moutot Noce">
-        </amp-img>
-    </div>
+  <div class="u-center-content">
+    <amp-img
+      src="assets/sophie-200x300.jpg"
+      srcset="assets/sophie-200x300.jpg 200w"
+      width="100"
+      height="150"
+      alt="Photo de Maitre Sophie Moutot Noce">
+    </amp-img>
+  </div>
 </section>
 <!-- / Presentation -->
 
 <!-- Core Competencies -->
 <section class="section" id="info" role="main">
-    <div class="container">
-        <h4>Compétences</h4>
-        <p role="contentinfo">
-            Maître Sophie MOUTOT NOCE conseille, assiste et défend toutes les victimes d’accidents ayant engendré des dommages corporels. Elle met tout en ouvre afin de faire reconnaître le droit à indemnisation intégral des victimes et afin d’obtenir l’indemnisation de tous les préjudices subis par elles et leurs proches 
-        </p>
-        <br>
-        <p>
-            Exemples d’évènements traumatiques ou accidentels permettant une indemnisation: 
-        </p>
-        <div class="Competencies">
-            <div class="row">
-                <div class="col" role="complementary">
-                            <h5>Accidents de la circulation</h5>
-                            <p>Vous êtes piéton, cycliste, passager ou conducteur d’un deux roues ou d’une voiture et avez été victime d’un accident.<br>Le Cabinet vous assiste et vous défend dans vos démarches indemnitaires.</p>
-                            </div>
-                <div class="col" role="complementary">
-                            <h5>Accidents de transport</h5>
-                            <p>Vous avez été victime d’un accident lorsque vous étiez usager des transports en commun: train, métro, bus, RER, avion etc. <br>Contactez le Cabinet afin d’être orienté, assisté et obtenir la réparation de vos préjudices.</p>
-                            </div>
-                <div class="col" role="complementary">
-                            <h5>Accidents sportifs</h5>
-                            <p>Pour toutes blessures lors de vos activités sportives et/ou de loisir: ski, surf, balade équestre etc., <br>Le Cabinet saura vous assister pour faire reconnaître vos droits et vous obtenir la meilleure indemnisation.</p>
-                            </div>
-            </div>
-            <div class="row">
-                        <div class="col" role="complementary">
-                        <h5>Aggressions et attentats</h5>
-                        <p>Victimes de violences volontaires ou involontaires (à caractère sexuel ou non) occasionnant des séquelles physiques et/ou psychologiques définitives.<br>Le Cabinet vous aidera à obtenir l indemnisation de vos préjudices par la Solidarité Nationale.</p>
-                        </div>
-                        <div class="col" role="complementary">
-                        <h5>Accidents scolaires</h5>
-                        <p>Votre enfant a eu un accident commis involontairement par un autre enfant en cours de récréation. Il peut obtenir l’indemnisation de ses préjudices et vous pouvez réclamer le remboursement des frais que vous avez engagés auprès de l’assurance habitation&nbsp;/&nbsp;responsabilité&nbsp;civile des parents de cet autre enfant.</p>
-                        </div>
-                        <div class="col" role="complementary">
-                        </div>
-                        </div>
+  <div class="container">
+    <h4>Compétences</h4>
+    <p role="contentinfo">
+      Maître Sophie MOUTOT NOCE conseille, assiste et défend toutes les personnes qui ont été victimes de dommages corporels suite à un accident.
+      Elle réalise toutes les démarches afin de faire reconnaître le droit à indemnisation de l'intégralité des préjudices de ses clients conformément à la Nomenclature Dintilhac aussi bien dans un cadre amiable que judiciaire.
+    </p>
+    <br>
+    <p>
+      Exemples d’évènements traumatiques ou accidentels permettant une indemnisation: 
+    </p>
+    <div class="Competencies">
+      <div class="row">
+        <div class="col" role="complementary">
+          <h5>Accidents de la circulation</h5>
+          <p>
+            Vous êtes piéton, cycliste, passager ou conducteur d’un deux roues ou d’une voiture et avez été victime d’un accident.<br>Le Cabinet vous assiste et vous défend dans vos démarches indemnitaires.
+          </p>
         </div>
+        <div class="col" role="complementary">
+          <h5>Accidents de transport</h5>
+          <p>
+            Vous avez été victime d’un accident lorsque vous étiez usager des transports en commun: train, métro, bus, RER, avion etc. <br>Contactez le Cabinet afin d’être orienté, assisté et obtenir la réparation de vos préjudices.
+          </p>
+        </div>
+        <div class="col" role="complementary">
+          <h5>Accidents sportifs</h5>
+          <p>
+            Pour toutes blessures lors de vos activités sportives et/ou de loisir: ski, surf, balade équestre etc., <br>Le Cabinet saura vous assister pour faire reconnaître vos droits et vous obtenir la meilleure indemnisation.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col" role="complementary">
+          <h5>Aggressions et attentats</h5>
+          <p>
+            Victimes de violences volontaires ou involontaires (à caractère sexuel ou non) occasionnant des séquelles physiques et/ou psychologiques définitives.<br>Le Cabinet vous aidera à obtenir l indemnisation de vos préjudices par la Solidarité Nationale.
+          </p>
+        </div>
+        <div class="col" role="complementary">
+          <h5>Accidents scolaires</h5>
+          <p>
+            Votre enfant a eu un accident commis involontairement par un autre enfant en cours de récréation. Il peut obtenir l’indemnisation de ses préjudices et vous pouvez réclamer le remboursement des frais que vous avez engagés auprès de l’assurance habitation&nbsp;/&nbsp;responsabilité&nbsp;civile des parents de cet autre enfant.
+          </p>
+        </div>
+        <div class="col" role="complementary">
+          <h5>Accidents médicaux</h5>
+          <p>
+            Le Cabinet vous assistera dans vos démarches que vous soyez victime d'un accident médical ayant pour cause la faute d'un médecin, une infection nosocomiale ou encore un aléa thérapeutique.
+          </p>
+        </div>
+      </div>
+    </div>
     </div>
 </section>
 <!-- / Core Competencies -->
@@ -74,20 +89,23 @@ layout: default
         <h4>Mes engagements</h4>
         <ul>
             <li>
-                le <em>1er rendez vous est sans obligation</em>
+                Le <em>1er rendez vous est sans obligation</em>
             </li>
             <li>
-                un cabinet <em>à taille humaine</em> et <em>à l’écoute des victimes</em>
+              Un cabinet défendant exclusivement les victimes d'accidents corporels
             </li>
             <li>
-                intervention <em>sur tout le territoire</em> national
+                Un cabinet <em>à taille humaine</em> et <em>à l’écoute des victimes</em>
             </li>
             <li>
-                la <em>transparence des honoraires</em> dès l’ouverture du dossier
+                La <em>transparence des honoraires</em> dès l’ouverture du dossier
+            </li>
+            <li>
+                Un cabinet intervenant <em>sur tout le territoire</em> national et notamment en Ile de France, dans le Var et dans les Alpes
             </li>
         </ul>
     </div>
     
-    N'hésitez pas à me contacter pour toute question concernant vos préjudices et leur indemnisation.
+    N'hésitez pas à contacter Maître Sophie Moutot Noce pour toute question concernant vos préjudices et leur indemnisation.
 </section>
 <!-- / Engagements -->
