--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,45 +36,21 @@ layout: default
       Exemples d’évènements traumatiques ou accidentels permettant une indemnisation: 
     </p>
     <div class="Competencies">
-      <div class="row">
+      {% for competency in site.competencies %}
+      {% capture mod %}{{ forloop.index0 | modulo:3 }}{% endcapture %}
+      {% if mod == '0' or forloop.first %}
+        {% unless forloop.first %}</div>{% endunless %}
+        <div class="row">
+      {% endif %}
         <div class="col" role="complementary">
-          <h5>Accidents de la circulation</h5>
+          <h5>{{ competency.title | escape }}</h5>
           <p>
-            Vous êtes piéton, cycliste, passager ou conducteur d’un deux roues ou d’une voiture et avez été victime d’un accident.<br>Le Cabinet vous assiste et vous défend dans vos démarches indemnitaires.
+          {% for text in competency.texts %}
+            {% unless forloop.first %}<br>{% endunless %}{{ text | escape }}
+          {% endfor %}
           </p>
         </div>
-        <div class="col" role="complementary">
-          <h5>Accidents de transport</h5>
-          <p>
-            Vous avez été victime d’un accident lorsque vous étiez usager des transports en commun: train, métro, bus, RER, avion etc. <br>Contactez le Cabinet afin d’être orienté, assisté et obtenir la réparation de vos préjudices.
-          </p>
-        </div>
-        <div class="col" role="complementary">
-          <h5>Accidents sportifs</h5>
-          <p>
-            Pour toutes blessures lors de vos activités sportives et/ou de loisir: ski, surf, balade équestre etc., <br>Le Cabinet saura vous assister pour faire reconnaître vos droits et vous obtenir la meilleure indemnisation.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col" role="complementary">
-          <h5>Aggressions et attentats</h5>
-          <p>
-            Victimes de violences volontaires ou involontaires (à caractère sexuel ou non) occasionnant des séquelles physiques et/ou psychologiques définitives.<br>Le Cabinet vous aidera à obtenir l indemnisation de vos préjudices par la Solidarité Nationale.
-          </p>
-        </div>
-        <div class="col" role="complementary">
-          <h5>Accidents scolaires</h5>
-          <p>
-            Votre enfant a eu un accident commis involontairement par un autre enfant en cours de récréation. Il peut obtenir l’indemnisation de ses préjudices et vous pouvez réclamer le remboursement des frais que vous avez engagés auprès de l’assurance habitation&nbsp;/&nbsp;responsabilité&nbsp;civile des parents de cet autre enfant.
-          </p>
-        </div>
-        <div class="col" role="complementary">
-          <h5>Accidents médicaux</h5>
-          <p>
-            Le Cabinet vous assistera dans vos démarches que vous soyez victime d'un accident médical ayant pour cause la faute d'un médecin, une infection nosocomiale ou encore un aléa thérapeutique.
-          </p>
-        </div>
+      {% endfor %}
       </div>
     </div>
     </div>
