--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -16,6 +16,8 @@
              "telephone": " +33650228354",
              "openingHours" : "Mo,Tu,We,Th,Fr 09:00-17:00",
              "hasMap": "https://www.google.fr/maps/place/28+Rue+du+Ranelagh,+75016+Paris/@48.8538296,2.2751066,17z/data=!3m1!4b1!4m5!3m4!1s0x47e6700098a35afb:0xd714602e14f6a20b!8m2!3d48.8538296!4d2.2772899",
+             {% if page.published %}"datePublished": "{{ page.published }}",{% endif %}
+             {% if page.updated %}"dateModified": "{{ page.updated }}",{% else %}{% if page.published %}"dateModified": "{{ page.published }}",{% endif %}{% endif %}
              "address":
                   {
                   "@type": "PostalAddress",
@@ -32,7 +34,6 @@
         },
         "headline": "{{ page.title }}",
         "url": "{{ page.url | absolute_url }}",
-        {%- if page.datepublished %} "datePublished": "{{ page.datepublished }}"{% endif %}
         "image": [
           "share-logo.png"
         ]
@@ -50,10 +51,9 @@
 {%- if layout.is_post %}
 {%- if page.subtitle %}
 <meta name="twitter:description" content="{{ page.subtitle }}" />
-{% endif -%}
-{%- else %}
+{%- endif %}{% else -%}
 <meta name="twitter:description" content="{{ site.description }}" />
-{% endif -%}
+{%- endif -%}
 {% if page.unsplash_id -%}
 <meta name="twitter:image" content="https://source.unsplash.com/{{ page.unsplash_id }}/200x200" />
 {% else %}
@@ -69,19 +69,31 @@
 {% endif -%}
 <meta property="og:url" content="{{ page.url | absolute_url }}" />
 {%- if layout.is_post %}
-{%- if page.subtitle %}
+{% if page.subtitle %}
 <meta property="og:description" content="{{ page.subtitle }}" />
-{% endif -%}
-{%- else %}
+{% endif %}{% else %}
 <meta property="og:description" content="{{ site.description }}" />
 {% endif -%}
-{% if page.unsplash_id -%}
+{%- if page.unsplash_id -%}
 <meta property="og:image" content="https://source.unsplash.com/{{ page.unsplash_id }}/200x200" />
-{%- else %}
+{%- else -%}
 <meta property="og:image" content="{{ "/share-logo.png" | asset_url | absolute_url }}" />
-{% endif -%}
+{%- endif %}
 <meta property="og:image:width" content="200" />
 <meta property="og:image:height" content="200" />
 <meta property="og:locale" content="fr_FR" />
 <meta property="og:site_name" content="{{ site.title }}" />
+{%- if page.updated %}
+<meta property="og:updated_time" content="{{ page.updated }}" />
+{% else %}{% if page.published %}
+<meta property="og:updated_time" content="{{ page.published }}" />
+{% endif %}{% endif -%}
+<meta property="article:tag" content="Indemnisation des victimes d'accidents corporels" />
+<meta property="article:section" content="Préjudices Corporels" />
+{% if page.published %}<meta property="article:published_time" content="{{ page.published }}" />{% endif %}
+{%- if page.updated %}
+<meta property="article:modified_time" content="{{ page.updated }}" />
+{% else %}{% if page.published %}
+<meta property="article:modified_time" content="{{ page.published }}" />
+{% endif %}{% endif -%}
 <!-- / Open Graph -->
