--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@ layout: default
     <ul>
     {% for post in site.posts %}
       <li class="PostExcerpt" role="article">
-        {% include post_date.html date=post.date %}
+        {% include post_date.html date=post.published %}
         <a href="{{ post.url | relative_url }}">
           <h3>{{ post.title | escape }}</h3>
           <h5>{{ post.subtitle | escape }}</h5>
