--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,6 +54,9 @@
                             {% endif %}
                         </ul>
                     </div>
+                    <p>
+                      <a href="{% link mentions.md %}">Mentions légales</a>
+                    </p>
                 </div>
             </div>
         </div>
