--- a/_includes/info_header.html
+++ b/_includes/info_header.html
@@ -1,7 +1,7 @@
 <!-- Info Header -->
 <header class="InfoHeader u-highlighted-content" itemscope itemtype="http://schema.org/LocalBusiness" role="complementary">
     <div>
-        <span itemprop="name">Cabinet MN Avocat</span> / première consultation gratuite
+        <span itemprop="name">Cabinet MN Avocat</span> / avocat de victimes d'accidents corporels
     </div>
     <div>
         {% include email.html %}
