--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
   <div class="container">
     <h4>Compétences</h4>
     <p role="contentinfo">
-      Maître Sophie MOUTOT NOCE conseille, assiste et défend toutes les personnes qui ont été victimes de dommages corporels suite à un accident.
+      Maître Sophie MOUTOT NOCE conseille, assiste et défend les personnes victimes de dommages corporels suite à un accident.
       Elle réalise toutes les démarches afin de faire reconnaître le droit à indemnisation de l'intégralité des préjudices de ses clients conformément à la Nomenclature Dintilhac aussi bien dans un cadre amiable que judiciaire.
     </p>
     <br>
@@ -62,11 +62,8 @@ layout: default
 <!-- Engagements -->
 <section class="section" role="note">
     <div class="container">
-        <h4>Mes engagements</h4>
+        <h4>Engagements</h4>
         <ul>
-            <li>
-                Le <em>1er rendez vous est sans obligation</em>
-            </li>
             <li>
               Un cabinet défendant exclusivement les victimes d'accidents corporels
             </li>
@@ -74,10 +71,13 @@ layout: default
                 Un cabinet <em>à taille humaine</em> et <em>à l’écoute des victimes</em>
             </li>
             <li>
-                La <em>transparence des honoraires</em> dès l’ouverture du dossier
+                Un cabinet intervenant <em>sur tout le territoire</em> national, notamment en Ile de France, dans le Var et les Alpes
             </li>
             <li>
-                Un cabinet intervenant <em>sur tout le territoire</em> national et notamment en Ile de France, dans le Var et dans les Alpes
+                Des <em>honoraires transparents</em> dès l’ouverture du dossier
+            </li>
+            <li>
+              Un premier rendez vous est <em>sans engagement</em>
             </li>
         </ul>
     </div>
